# Cognitive-Runtime-Kernel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docs  pyproject.toml
.github/workflows/: tests.yml
examples/: basic_math.py
src/cpk/: __main__.py  agent.py  constraints.py  events.py  kernel.py  population.py  primitives.py  reducers.py  scheduler.py  state.py  world.py
src/cpk/providers/: base.py  mock.py
src/cpk/runtime/: setup.py
tests/: test_constraints.py  test_events.py  test_population.py
