[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpk-kernel"
version = "0.2.1"
description = "Constitutional Cognitive Runtime Kernel"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "CPK Contributors"}
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.35",
    "pydantic>=2.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.28"
]

[project.scripts]
cpk = "cpk.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
